# server-monitor

./: README.md  environment.yml  monitor.py  pyproject.toml  setup.cfg
.github/workflows/: black.yml
server_monitor/: cpu.py  cpu_and_ram.py  fetcher_base.py  gpu.py  monitor.py
src/server_monitor/: cpu.py  fetcher_base.py  gpu.py  utils.py
