[metadata]
name=server-monitor
version=0.0.1
author=Kristian Hartikainen
description=A small package to help monitor CPU and GPU usage on WHiRL servers
url=https://github.com/oxwhirl/server-monitor

[options]
python_requires= >=3.9
packages=find:

[options.packages.find]

[options.entry_points]
console_scripts =
    server-monitor = server_monitor.monitor:main
